<resources>
    <string name="app_name">Konane</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_restart">Restart</string>
    <string name="action_preset">Preset</string>
    <string name="action_case1">Case 1</string>
    <string name="action_case2">Case 2</string>
    <string name="settings_title">Settings</string>
    <string name="settings_six">6X6</string>
    <string name="settings_eight">8X8</string>
    <string name="settings_ten">10X10</string>
    <string name="settings_solo">Solo</string>
    <string name="settings_multi">Multi</string>
    <string name="settings_first">1st</string>
    <string name="settings_second">2nd</string>
    <string-array name="settings_search_select">
        <item>Depth</item>
        <item>Breadth</item>
        <item>Best</item>
    </string-array>
</resources>
