<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="never"/>

    <item android:id="@+id/action_load"
        android:title="@string/action_load"
        app:showAsAction="never"/>

    <item android:id="@+id/action_restart"
        android:title="@string/action_restart"
        app:showAsAction="never"/>

    <item android:id="@+id/action_preset"
        android:title="@string/action_preset"
        app:showAsAction="never"/>

    <item android:id="@+id/action_case1"
        android:title="@string/action_case1"
        app:showAsAction="never"/>

    <item android:id="@+id/action_case2"
        android:title="@string/action_case2"
        app:showAsAction="never"/>
</menu>